# dataclass-mapper

./: .gitignore  .pre-commit-config.yaml  .pre-commit-sync-repos.json  .readthedocs.yaml  CONTRIBUTING.rst  LICENSE.md  README.md  README.rst  conftest.py  pyproject.toml  tox.ini
.github/workflows/: publish.yml  test.yml
dataclass_mapper/: __init__.py  classmeta.py  code_generator.py  enum.py  exceptions.py  field.py  fieldmeta.py  mapper.py  mapper_mode.py  mapping_method.py  mapping_preparation.py  namespace.py  special_field_mappings.py  utils.py
dataclass_mapper/assignments/: __init__.py  assignment.py  dict.py  function.py  list.py  recursive.py  simple.py  utils.py
dataclass_mapper/expression_converters/: __init__.py  anything_to_any.py  class_to_union.py  dict.py  different_class.py  expression_converter.py  list.py  non_optional_to_optional.py  optional_to_optional.py  same_class.py  set.py  tuple.py  union_to_union.py
dataclass_mapper/fieldtypes/: __init__.py  any.py  base.py  class_fieldtype.py  dict.py  list.py  optional.py  set.py  tuple.py  union.py  utils.py
dataclass_mapper/implementations/: __init__.py  base.py  class_type.py  dataclasses.py  pydantic_v1.py  pydantic_v2.py  sqlalchemy.py  utils.py
dataclass_mapper/update_expressions/: __init__.py  classes.py  unsupported_dataclasses.py  update_expression.py
docs/: architecture.rst  conf.py  dataclass-mapper.rst  dataclasses.rst  enums.rst  example.rst  features.rst  implementation-specifics.rst  index.rst  pydantic.rst  pydantic_v1.rst  requirements.txt  sqlalchemy.rst  type_safety.rst
docs/_static/: style.css
docs/architecture/: 01-introduction-and-goals.rst  02-architecture-constraints.rst  03-system-scope-and-context.rst  04-solution-strategy.rst  05-building-block-view.rst  06-runtime-view.rst  07-deployment-view.rst  08-cross-cutting-concepts.rst  09-architecture-decisions.rst  10-quality.rst  11-risks-and-technical-debt.rst  12-glossary.rst  13-potential-ideas.rst
docs/architecture/adr/: 001-write-a-new-library.rst
docs/features/: custom_conversion_function.rst  defaults.rst  define_mappings.rst  extra_context.rst  field_mappings.rst  optional_source_fields.rst  recursive_mappings.rst  update_models.rst
safe_mapper/: __init__.py  field.py  mapping_method.py  safe_mapper.py
tests/: mapper.py  test_any.py  test_assume_not_none.py  test_check_types.py  test_create_mapping.py  test_create_mapping_method.py  test_dataclass_fields.py  test_debug.py  test_default_factories.py  test_default_values.py  test_defaults.py  test_dict.py  test_duplicate_class_names.py  test_edge_cases.py  test_enum_mapper.py  test_from_classmethod.py  test_list.py  test_mapping_method.py  test_not_mappable.py  test_optional.py  test_provide_with_extra.py  test_pydantic.py  test_pydantic_fields.py  test_recursive.py  test_safe_mapper.py  test_sqlalchemy_fields.py  test_support_dataclass_type_strings.py  test_tuple.py  test_type_representations.py  test_types_as_strings.py  test_union.py  test_update.py  test_update_mapping_method.py  test_utils.py  test_validator_check.py  utils.py
tests/expression_converter/: test_expression_converter.py
tests/fieldtypes/: test_parsing_types.py
tests/implementations/dataclasses/: test_dataclass_defaults.py  test_dataclass_fields.py  test_dataclass_init.py
tests/implementations/pydantic/: test_pydantic_defaults.py
tests/implementations/pydantic_v1/: test_pydantic.py  test_pydantic_fields.py  test_pydantic_v1.py  test_pydantic_v1_fields.py  test_pydantic_v1_mapping_method.py  test_pydantic_v1_validator_check.py  test_validator_check.py
tests/implementations/pydantic_v2/: test_pydantic_v2.py  test_pydantic_v2_fields.py  test_pydantic_v2_mapping_method.py  test_pydantic_v2_validator_check.py
tests/implementations/sqlalchemy/: test_sqlalchemy.py  test_sqlalchemy_fields.py
tests/models/: base.py  display.py  technical.py
