[tool.poetry]
name = "dataclass-mapper"
version = "0.0.0"
description = "Autogenerate mappings between dataclasses"
authors = ["Jakob Kogler <jakob.kogler@gmail.com>"]

readme = "README.rst"
license = "MIT"

repository = "https://github.com/dataclass-mapper/dataclass-mapper"
homepage = "https://dataclass-mapper.readthedocs.io"
documentation = "https://dataclass-mapper.readthedocs.io"

keywords = ['dataclass', 'pydantic', 'python', 'automation']

classifiers = [
  "Topic :: Software Development :: Code Generators",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.12",
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 1",
  "Framework :: Pydantic :: 2",
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = { version = ">=1.9.0", optional = true }

[tool.poetry.extras]
pydantic = ["pydantic"]

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
black = "^23.3.0"
mypy = "^1.3.0"
tox = "^4.5.2"
pytest-cov = "^4.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-plantuml = "^0.25"
sphinx-autobuild = "^2021.3.14"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  # Pyflakes
  "F",
  # Pycodestyle
  "E",
  "W",
  # flake8-pie
  "PIE",
  # isort
  "I001",
]
line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
check_untyped_defs = true
warn_return_any = true
files = ["dataclass_mapper", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--doctest-glob \"*.rst\""
filterwarnings = ["error"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@abstractmethod"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
